--- a/app1 - basics/index.html
+++ b/app1 - basics/index.html
@@ -1,9 +1,12 @@
 <html>
-	<body>
-	
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
-		<script src="app.js"></script>
-		<script src="controller.js"></script>
-		<script src="service.js"></script>
-	</body>
+
+<body ng-app="app1" , ng-controller="mainCtrl">
+  <input type="text" ng-model="searchTerm">
+  <div>{{searchTerm}}</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+  <script src="app.js"></script>
+  <script src="controller.js"></script>
+  <script src="service.js"></script>
+</body>
+
 </html>
